--- a/기본문법.md
+++ b/기본문법.md
@@ -145,4 +145,15 @@ public static void main(String[] args){
 - 모든 데이터를 정렬하는 Collections클래스의 sort()메서드
   - Collections.sort(list);
 
+
+---
+
+
+## 자주쓰는 문법
+
+### 정렬
+```
+Arrays.sort(nodes, (o1,o2) -> Integer.compare(o1.cost, o2.cost)); //Arrays를 이용해서 정렬
+int[] answer = result.stream().sorted().mapToInt(Integer::intValue).toArray(); //stream을 이용해서 정렬
+```
   
