feat : 정렬추가, valueOf추가

--- a/기본문법.md
+++ b/기본문법.md
@@ -155,6 +155,8 @@ public static void main(String[] args){
 ```
 Arrays.sort(nodes, (o1,o2) -> Integer.compare(o1.cost, o2.cost)); //Arrays를 이용해서 정렬
 int[] answer = result.stream().sorted().mapToInt(Integer::intValue).toArray(); //stream을 이용해서 정렬
+
+Arrays.sort(numbers,Collections.reverseOrder()); //역순 정렬
 ```
   
 ### 우선순위 큐
@@ -180,5 +182,9 @@ Arrays.fill(dist, Integer.MAX_VALUE);
 ````
 String space = " ".repeat(100); // 100번 반복해서 String을 만듦
 sb.replace(start,end,space); //!주의점 , [end]는 [end-1]까지 reaplace됨
+
+long n = 123317208370;
+String[] numbers = String.valueOf(n).split("");
+
 ````
 
