feat: map 정렬 (stream이용) 기본 문법 추가

--- a/기본문법.md
+++ b/기본문법.md
@@ -188,3 +188,9 @@ String[] numbers = String.valueOf(n).split("");
 
 ````
 
+### map을 stream을 이용해서 정렬하기
+````
+map.entrySet().stream().sorted((o1,o2)-> Integer.compare(o2.getValue(),o1.getValue())).mapToInt(entry -> entry.getKey()).toArray();
+````
+
+
