기본 문법 : 10진수 변환 문법

--- a/기본문법.md
+++ b/기본문법.md
@@ -193,4 +193,16 @@ String[] numbers = String.valueOf(n).split("");
 map.entrySet().stream().sorted((o1,o2)-> Integer.compare(o2.getValue(),o1.getValue())).mapToInt(entry -> entry.getKey()).toArray();
 ````
 
+### 10진수 변환하기
+
+```
+private static String toBinary(int decimal){
+        return Integer.toBinaryString(decimal);
+}
+```
+
+```
+Integer.toOctalString(int i)	// 10->8
+Integer.toHexaString(int i)     // 10->16
+```
 
